--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,5 +1,9 @@
 -*- mode: change-log; mode: auto-fill; -*-
 
+0.1.0 2010-01-30
+	o Added population() and select().
+	o Added the example fragments.
+
 0.1.0 2010-01-29
 	o Added mask() and each().
 	o Added the [start,length]= handling. (FREQ #27742)
